--- a/Shop_03_multiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
@@ -61,29 +61,44 @@
                 <div class="custom-slider">
                     <div>
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            @for (int i = 0; i < slide.Length; i++)
-                            {
-                                <ol class="carousel-indicators">
-                                    <li class="active" data-target="#carousel-example-generic-@i" data-slide-to="@i"></li>
-                                </ol>
-
-                            }
+                            <ol class="carousel-indicators">
+                                @for (int i = 0; i < slide.Length; i++)
+                                {
+                                    if (i == 0)
+                                    {
+                                        <li class="active" data-target="#carousel-example-generic" data-slide-to="0"></li>
+                                    }
+                                    else
+                                    {
+                                        <li data-target="#carousel-example-generic" data-slide-to="@i" class=""></li>
+                                    }
+                                }
+                            </ol>
                             @for (int i = 0; i < slide.Length; i++)
                             {
                                 <div class="carousel-inner">
                                     @if (i == 0)
                                     {
                                         <div class="item active">
-                                            <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
+                                            <img src="@slide[i].ImagesUrl" alt="slide1" />
                                             <div class="carousel-caption">
                                                 @Html.Raw(slide[i].Description)
                                             </div>
                                         </div>
                                     }
-                                    else
+                                    else if (i == 1)
                                     {
                                         <div class="item">
-                                            <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
+                                            <img src="@slide[i].ImagesUrl" alt="slide2" />
+                                            <div class="carousel-caption">
+                                                @Html.Raw(slide[i].Description)
+                                            </div>
+                                        </div>
+                                    }
+                                    else if (i == 2)
+                                    {
+                                        <div class="item">
+                                            <img src="@slide[i].ImagesUrl" alt="slide3" />
                                             <div class="carousel-caption">
                                                 @Html.Raw(slide[i].Description)
                                             </div>
