--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -117,7 +117,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/home/contact">Liên hệ</a></li>
+                                <li class="level0 parent drop-menu"><a class="level-top" href="/home/about"><span>Giới thiệu</span></a></li>
+                                <li class="level0 parent drop-menu"><a class="level-top" href="/home/contact"><span>Liên hệ</span></a></li>
                                 <li class="level0 parent drop-menu">
                                     <a href="/blog"><span>Tin tức</span> </a>
                                     <!--sub sub category-->
