--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -35,7 +35,7 @@
                                 <li id="nav-home" class="level0 parent drop-menu"><a class="level-top active" href="/"><span>Trang Chủ</span></a></li>
                                 <li class="level0 parent drop-menu"><a class="level-top" href="/home/about"><span>Giới thiệu</span></a></li>
                                 <li class="mega-menu">
-                                    <a class="level-top" href="/list"><span>Sản phẩm‎</span></a>
+                                    <a class="level-top" href="/"><span>Sản phẩm‎</span></a>
                                     <div class="level0-wrapper dropdown-6col" style="left: 0px; display: none;">
                                         <div class="container">
                                             <div class="level0-wrapper2">
