remove element not ready

--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -100,11 +100,10 @@
                           
                             <li><a title="Information" href="/home/contact">Liên hệ</a></li>
                             <li><a title="Information" href="/home/about">Về chúng tôi</a></li>
-                            <li><a title="Information" href="/blogs">Blogs</a></li>
-                            <li><a title="Addresses" href="/policy/ship">Chính sách vận chuyển</a></li>
+                            <li><a title="Information" href="/blog">Blogs</a></li>
+                            @*<li><a title="Addresses" href="/policy/ship">Chính sách vận chuyển</a></li>
                             <li><a title="Addresses" href="/policy/rollback">Chính sách đổi trả</a></li>
-                            <li><a title="Orders History" href="/policy/payment">Hướng dẫn thanh toán</a></li>
-                         
+                            <li><a title="Orders History" href="/policy/payment">Hướng dẫn thanh toán</a></li>*@
                         </ul>
                     </div>
                     <div class="footer-column">
