--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -154,8 +154,8 @@
                             <div class="block-subtitle hide">
                                 <div class="top-subtotal"><span class="spN">0</span> Sp, <span id="ttSC"></span> </div>                            
                             </div>                    
-                            <ul class="mini-products-list" id="cart-sidebar"></ul>
-                            <div class="actions cart-buttons">
+                            <ul class="mini-products-list" id="cart-sidebar"  style="display: none;"></ul>
+                            <div class="actions cart-buttons"  style="display: none;">
                                 <a class="btn-checkout" href="/product/checkout"><span>Đặt hàng</span></a>
                             </div>                            
                         </div>                        
