--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -7,10 +7,11 @@
                     Ads[] slide = (Ads[])ViewData["AdsSlide"];
                     if (slide.Length > 0)
                     {
-                        <ul class="owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="10" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":3}}'>
+                        <ul class="owl-carousel"  data-dots="false" data-loop="true" data-nav="true" data-margin="10" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1}}'>
                             @foreach (var item in slide)
                             {
                                 <li><a href="@item.ClickUrl"><img alt="@item.Description" src="@item.ImagesUrl" title="@item.Description" /></a></li>
+                                
                             }
                         </ul>
                         
@@ -24,8 +25,7 @@
                         <li><img src="/assets/images/290x360.png" title="Funky roots" /></li>
                         <li><img src="/assets/images/290x360.png" title="Funky roots" /></li>
                         <li><img src="/assets/images/290x360.png" title="Funky roots" /></li>
-                    </ul>
-                   
+                    </ul>                   
                 }
             </div>
         </div>
