--- a/Shop_03_MultiProduct/Views/Product/List.cshtml
+++ b/Shop_03_MultiProduct/Views/Product/List.cshtml
@@ -26,7 +26,7 @@
                                     <li class="home"> <a href="/" title="Trang chủ">Trang chủ</a> <span>—› </span> </li>
                                     @if (ViewBag.isParent != null)
                                     {
-                                        <li class="category1599"> 
+                                        <li class="category1599">
                                             <a href="@Anpero.StringHelpper.GetParentCategoryLink(productList.Item[0].ParentCatName, productList.Item[0].ParentId)" title="@productList.Item[0].ParentCatName">
                                                 @productList.Item[0].ParentCatName
                                             </a>
@@ -109,47 +109,46 @@
                                         <ol class="products-list" id="products-list">
                                             @foreach (AnperoFrontend.WebService.ProductItem item in productList.Item)
                                             {
-                                                <li class="item first">
-                                                    <div class="product-image"> 
-                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                                            <img class="small-image" src="@item.Images" alt="@item.PrName"> 
-                                                        </a> 
+                                            <li class="item first">
+                                                <div class="product-image">
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                        <img class="small-image" src="@item.Images" alt="@item.PrName">
+                                                    </a>
+                                                </div>
+                                                <div class="product-shop">
+                                                    <h2 class="product-name">
+                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a>
+                                                    </h2>
+                                                    <div class="ratings">
+                                                        <div class="rating-box">
+                                                            <div style="width:50%" class="rating"></div>
+                                                        </div>
+                                                        <p class="rating-links"> <a href="#/review/product/list/id/167/category/35/">1 Nhận xét</a> <span class="separator">|</span> <a href="#review-form">Thêm nhận xét</a> </p>
                                                     </div>
-                                                    <div class="product-shop">
-                                                        <h2 class="product-name">
-                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a>
-                                                        </h2>
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div style="width:50%" class="rating"></div>
-                                                            </div>
-                                                            <p class="rating-links"> <a href="#/review/product/list/id/167/category/35/">1 Nhận xét</a> <span class="separator">|</span> <a href="#review-form">Thêm nhận xét</a> </p>
-                                                        </div>
-                                                        <div class="desc std">
-                                                            <p>
-                                                                @item.ShortDesc
-                                                            </p>
-                                                            <p>
-                                                                <a class="link-learn" title="" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">Chi tiết</a>
-                                                            </p>
-                                                        </div>
-                                                        <div class="price-box">
-                                                            <p class="old-price"> <span class="price-label"></span> <span id="old-price-212" class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)0</span> </p>
-                                                            <p class="special-price"> <span class="price-label"></span> <span id="product-price-212" class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(@item.SalePrice)0</span> </p>
-                                                        </div>
-                                                        <div class="actions">
-                                                            <button class="button btn-cart ajx-cart" title="Mua ngay" type="button"><span>Mua ngay</span></button>
-                                                            <span class="add-to-links"> 
-                                                                <a title="Thêm vào giỏ hàng" class="button link-wishlist" href="#"><span>Thêm vào giỏ hàng</span></a> 
-                                                            </span>
-                                                        </div>
+                                                    <div class="desc std">
+                                                        <p>
+                                                            @item.ShortDesc
+                                                        </p>
+                                                        <p>
+                                                            <a class="link-learn" title="" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">Chi tiết</a>
+                                                        </p>
                                                     </div>
-                                                </li>
+                                                    <div class="price-box">
+                                                        <p class="old-price"> <span class="price-label"></span> <span id="old-price-212" class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)0</span> </p>
+                                                        <p class="special-price"> <span class="price-label"></span> <span id="product-price-212" class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(@item.SalePrice)0</span> </p>
+                                                    </div>
+                                                    <div class="actions">
+                                                        <button class="button btn-cart ajx-cart" title="Mua ngay" type="button"><span>Mua ngay</span></button>
+                                                        <span class="add-to-links">
+                                                            <a title="Thêm vào giỏ hàng" class="button link-wishlist" href="#"><span>Thêm vào giỏ hàng</span></a>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </li>
                                             }
                                         </ol>
                                     </div>
                                 </article>
-                                <!--	///*///======    End article  ========= //*/// -->
                             </div>
                         </div>
                         <aside class="col-left sidebar col-sm-3 col-xs-12 col-sm-pull-9 wow bounceInUp animated">
@@ -166,12 +165,12 @@
                                             <li>
                                                 <a class="active" href="@Anpero.StringHelpper.GetParentCategoryLink(productList.Item[0].ParentCatName, productList.Item[0].ParentId)">
                                                     @productList.Item[0].ParentCatName
-                                                </a> 
+                                                </a>
                                                 <span class="subDropdown minus"></span>
                                                 <ul class="level0_415" style="display:block">
                                                     @foreach (var p in commonInfo.ProductCategoryList.Where(p => p.Id == productList.Item[0].ParentId))
                                                     {
-                                                        foreach(var child in p.ChildCategory)
+                                                        foreach (var child in p.ChildCategory)
                                                         {
                                                             <li>
                                                                 <a href="@Anpero.StringHelpper.GetCategoryLink(child.Name, child.Id)">@child.Name</a>
@@ -210,7 +209,7 @@
                                 </div>
                                 <!--box-content box-category-->
                             </div>
-                            <!--side-nav-categories-->
+
                             <div class="block block-layered-nav">
                                 <div class="block-title"> Sắp xếp </div>
                                 <div class="block-content">
@@ -235,7 +234,6 @@
                                     </dl>
                                 </div>
                             </div>
-                            <!--Custom ads 3-->
                             @if (ViewData["slide3"] != null)
                             {
                                 Ads[] slide = (Ads[])ViewData["slide3"];
@@ -257,38 +255,30 @@
                                                         }
                                                     }
                                                 </ol>
-                                                @for (int i = 0; i < slide.Length; i++)
-                                                {
-                                                    <div class="carousel-inner">
-                                                        @if (i == 0)
+                                                <div class="carousel-inner">
+                                                    @for (int i = 0; i < slide.Length; i++)
+                                                    {
+
+                                                        if (i == 0)
                                                         {
                                                             <div class="item active">
-                                                                <img src="@slide[i].ImagesUrl" alt="slide1" />
+                                                                <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
                                                                 <div class="carousel-caption">
                                                                     @Html.Raw(slide[i].Description)
                                                                 </div>
                                                             </div>
                                                         }
-                                                        else if (i == 1)
+                                                        else
                                                         {
                                                             <div class="item">
-                                                                <img src="@slide[i].ImagesUrl" alt="slide2" />
+                                                                <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
                                                                 <div class="carousel-caption">
                                                                     @Html.Raw(slide[i].Description)
                                                                 </div>
                                                             </div>
                                                         }
-                                                        else if (i == 2)
-                                                        {
-                                                            <div class="item">
-                                                                <img src="@slide[i].ImagesUrl" alt="slide3" />
-                                                                <div class="carousel-caption">
-                                                                    @Html.Raw(slide[i].Description)
-                                                                </div>
-                                                            </div>
-                                                        }
-                                                    </div>
-                                                }
+                                                    }
+                                                </div>
                                                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"> <span class="sr-only">Previous</span> </a> <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"> <span class="sr-only">Next</span> </a>
                                             </div>
                                         </div>
@@ -300,50 +290,13 @@
                                 <div class="block-title"> Giỏ hàng </div>
                                 <div class="block-content">
                                     <div class="summary">
-                                        <p class="amount">There is <a href="#">1 item</a> in your cart.</p>
-                                        <p class="subtotal"> <span class="label">Cart Subtotal:</span> <span class="price">$299.00</span> </p>
+
+                                        <p class="subtotal"> <span class="label">Giá trị SP:</span> <span class="price" id="lpr"></span> </p>
                                     </div>
                                     <div class="ajax-checkout">
-                                        <button type="button" title="Checkout" class="button button-checkout" onclick="#"> <span>Checkout</span> </button>
+                                        <button type="button" title="Checkout" class="button button-checkout" onclick="#"> <span>Gửi đơn hàng</span> </button>
                                     </div>
-                                    <p class="block-subtitle">Recently added item(s)</p>
-                                    <ul id="cart-sidebar" class="mini-products-list">
-                                        <li class="item">
-                                            <div class="item-inner">
-                                                <a href="#" class="product-image"><img src="images/product-img.jpg" width="80" alt="product"></a>
-                                                <div class="product-details">
-                                                    <div class="access">
-                                                        <a href="#" class="btn-remove1">Remove</a>
-                                                        <a href="" title="Edit item" class="btn-edit">
-                                                            <i class="icon-pencil"></i><span class="hidden">Edit item</span>
-                                                        </a>
-                                                    </div>
-                                                    <!--access-->
-                                                    <strong>1</strong> x <span class="price">$299.00</span>
-                                                    <p class="product-name"><a href="#">RETIS LAPEN CASEN</a></p>
-                                                </div>
-                                                <!--product-details-bottoms-->
-                                            </div>
-                                        </li>
-                                        <li class="item  last1">
-                                            <div class="item-inner">
-                                                <a href="#" class="product-image"><img src="images/product-img.jpg" width="80" alt="product"></a>
-                                                <div class="product-details">
-                                                    <div class="access">
-                                                        <a href="#" class="btn-remove1">Remove</a>
-                                                        <a href="" title="Edit item" class="btn-edit">
-                                                            <i class="icon-pencil"></i><span class="hidden">Edit item</span>
-                                                        </a>
-                                                    </div>
-                                                    <!--access-->
-
-                                                    <strong>1</strong> x <span class="price">$299.00</span>
-                                                    <p class="product-name"><a href="#">RETIS LAPEN CASEN</a></p>
-                                                </div>
-                                                <!--product-details-bottoms-->
-                                            </div>
-                                        </li>
-                                    </ul>
+                                    <ul id="cart-sidebar2" class="mini-products-list"></ul>
                                 </div>
                             </div>
                             <!--End My Card-->
