--- a/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
     <script type="text/javascript" src="/assets/js/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="/assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="/assets/js/jquery.mobile-menu.min.js"></script>
+    <script type="text/javascript" src="/Scripts/ShoppingCart.js"></script>    
     
     <script type="text/javascript">
         jQuery(document).ready(function(){
