--- a/Shop_03_multiProduct/assets/stylesheet/style.css
+++ b/Shop_03_multiProduct/assets/stylesheet/style.css
@@ -12101,3 +12101,4 @@ select#shipping-address-select {
 .clients_author span{font-size:11px;   font-family: 'Montserrat', sans-serif; font-weight:normal; color:#c0e19b; display:inline-block; margin-left:7px}
 .bl-title h1 a{color:white;font-size:22px;}
 .hide{display:none;}
+#prCatCtTable img{width:160px;}
