add pay, rollback, shipper page

--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -98,12 +98,12 @@
                         <h4>Thông tin</h4>
                         <ul class="links">
                           
-                            <li><a title="Information" href="/home/contact">Liên hệ</a></li>
-                            <li><a title="Information" href="/home/about">Về chúng tôi</a></li>
-                            <li><a title="Information" href="/blog">Blogs</a></li>
-                            @*<li><a title="Addresses" href="/policy/ship">Chính sách vận chuyển</a></li>
-                            <li><a title="Addresses" href="/policy/rollback">Chính sách đổi trả</a></li>
-                            <li><a title="Orders History" href="/policy/payment">Hướng dẫn thanh toán</a></li>*@
+                            <li><a title="contact" href="/home/contact">Liên hệ</a></li>
+                            <li><a title="about" href="/home/about">Về chúng tôi</a></li>
+                            <li><a title="blog" href="/blog">Blogs</a></li>
+                            <li><a title="shipper" href="/chinh-sach-van-chuyen-a86">Chính sách vận chuyển</a></li>
+                            <li><a title="rollback" href="/chinh-sach-doi-tra-hang-tai-ngonlan-a84">Chính sách đổi trả</a></li>
+                            <li><a title="pay" href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">Hướng dẫn thanh toán</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
