--- a/Shop_03_multiProduct/Views/Home/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Home/Index.cshtml
@@ -11,7 +11,12 @@
 }
 @section health{
     <meta name="description" content="@commonInfo.Desc" />
-    <meta name="keywords" content="@commonInfo.Desc" />
+    <meta name="keywords" content="Thực phẩm sạch, Hoa quả sạch, Ngon Lành, Ngon Sạch, Uy tín, Bơ sạch, Bơ Sáp, Bơ Booth" />
+    <meta property="og:description" content="@commonInfo.Desc" />
+    <meta property="og:title" content="@commonInfo.Desc" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="ngonlanh.vn" />
+    <meta property="og:image" content="@commonInfo.Logo" />
 }
 <div class="content">
     <!-- Slider-->
