--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
@@ -70,7 +70,7 @@
                         <option value="11">10 đến 20 tỷ</option>
                         <option value="12">20 đến 30 tỷ</option>
                     </select>
-                    <button class="btn btn-default" type="submit">Tìm kiếm</button>
+                    <button class="btn btn-primary" type="submit">Tìm kiếm</button>
                 </form>
             </div>
         </div>
